--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -10,14 +10,12 @@
         "Microsoft.AspNet.Server.WebListener": "1.0.0-beta8",
         "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
         "Microsoft.AspNet.Identity": "3.0.0-beta8",
-        "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta8",
         "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta8",
         "Microsoft.AspNet.Authentication.Facebook": "1.0.0-beta8",
         "Microsoft.AspNet.Authentication.Google": "1.0.0-beta8",
         "Microsoft.AspNet.Authentication.Twitter": "1.0.0-beta8",
         "Microsoft.AspNet.Authorization": "1.0.0-beta8",
         "Microsoft.AspNet.StaticFiles": "1.0.0-beta8",
-        "EntityFramework.SqlServer": "7.0.0-beta8",
         "Microsoft.Framework.Configuration.EnvironmentVariables": "1.0.0-beta8",
         "Microsoft.Framework.Configuration.Json": "1.0.0-beta8",
         "Microsoft.Framework.OptionsModel": "1.0.0-beta8",
@@ -29,11 +27,11 @@
     },
     "webroot": ".",
     "frameworks": {
-        "dnx451": {
+        "dnx452": {
             "dependencies": {
-                "Microsoft.Framework.Logging.NLog": "1.0.0-beta8"
+              "Microsoft.Framework.Logging.NLog": "1.0.0-beta8",
+              "Dnx.Identity.MongoDB": ""
             }
-        },
-        "dnxcore50": {}
+        }
     }
 }
