--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -25,6 +25,7 @@
       "type": "build"
     },
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
+    "Microsoft.EntityFrameworkCore.InMemory": "1.0.0",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
