--- a/samples/IdentitySample.Mvc/appsettings.json
+++ b/samples/IdentitySample.Mvc/appsettings.json
@@ -1,15 +1,14 @@
 ﻿{
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Interop-Shared;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MongoDb": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "IdentitySample"
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
     }
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
 }
